--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,5 +54,5 @@ jobs:
           git add deployment.yaml
           git commit -m "Update image to ${{ github.sha }}"
           
-          # Push
+          # Push to:
           git push -f https://${GIT_TOKEN}@github.com/rslim087a/grade-api-gitops.git main
