--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,11 +42,15 @@ jobs:
           git clone https://github.com/${{GITHUB.repository_owner}}/grade-api-gitops.git gitops
           cd gitops
           
+          cat deployment.yml 
+          
           if [[ "$OSTYPE" == "darwin"* ]]; then
             sed -i '' "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
           else
             sed -i "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
           fi
+
+          cat deployment.yml
           
           # Commit changes
           git config --global user.name "GitHub Actions"
