--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
             ghcr.io/${{ github.repository }}:${{ github.sha }}
       - name: Update image name
         run: |
-          sed -i "s|ghcr/PLACEHOLDER/ghcr/${{GITHUB.repository_owner}}|g" deployment.yaml
+          sed -i "s|ghcr.io/PLACEHOLDER|ghcr.io/${{GITHUB.repository_owner}}|g" deployment.yaml
           
       - name: Update GitOps repository
         shell: bash
