--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,15 +38,18 @@ jobs:
           
           # Remove any existing gitops directory
           rm -rf gitops
-          
-          # Clone repository using HTTPS URL without token
+
+      - name: Update image name
+        run: |
           git clone https://github.com/${{GITHUB.repository_owner}}/grade-api-gitops.git gitops
           cd gitops
           
+          #Replace image tag
+          sed -i "s|ghcr.io/PLACEHOLDER|ghcr.io/${{ github.repository_owner }}|g" deployment.yaml
+          sed -i "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
+          
+          # Clone repository using HTTPS URL without token         
           cat deployment.yaml 
-      - name: Update image name
-        run: |
-          sed -i "s|ghcr.io/PLACEHOLDER|ghcr.io/${{GITHUB.repository_owner}}|g" deployment.yaml
           
           if [[ "$OSTYPE" == "darwin"* ]]; then
             sed -i '' "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
