--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           sonar-scanner \
             -Dsonar.projectKey=jaiyesh024_kubernetes-cicd-tutorial \
+            -Dsonar.organization=jaiyesh024 \
             -Dsonar.sources=. \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=$SONAR_TOKEN
